...
                if(snapshot.childrenCount!=0)
                    [groups addEntriesFromDictionary:snapshot.value];
                [groups setObject:appDelegate.currentClassUid forKey:groupuid];
                [curr_user updateChildValues:groups];
                [class updateChildValues:new_group];
            }];
            UIAlertController* alert = [UIAlertController alertControllerWithTitle:@"Yeah!"
                                                                           message:@"created" preferredStyle:UIAlertControllerStyleAlert];
            UIAlertAction* alertAction = [UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleDefault handler:^(UIAlertAction * action) {
                viewcontroller = [appDelegate.storyboard instantiateViewControllerWithIdentifier:@"ClassGroupsViewController"];
                [self presentViewController:viewcontroller animated:YES completion:nil];
            }];
            [alert addAction:alertAction];
            [self presentViewController:alert animated:YES completion:nil];
        }
...
